--- a/index.html
+++ b/index.html
@@ -65,6 +65,26 @@
               </a>
            </li>
 
+           <li>
+            <a 
+            target="_blank"
+            href="https://www.twitch.tv/directory/game/VALORANT">
+             <img 
+             src="https://static-cdn.jtvnw.net/ttv-boxart/516575-188x250.jpg" 
+             alt="Imagem do jogo Valorant">
+            </a>
+         </li>
+
+         <li>
+          <a 
+          target="_blank"
+          href="https://www.twitch.tv/directory/game/Alien%3A%20Isolation">
+           <img 
+           src="https://static-cdn.jtvnw.net/ttv-boxart/458443_IGDB-144x192.jpg" 
+           alt="Imagem do jogo Alien Isolation">
+          </a>
+       </li>
+
             </ul>
           </div>
         </section>
